capnhatcode